[tool.poetry]
name = "tca-scaffold"
version = "0.2.0"
description = ""
authors = ["Alex Hunsley <alex.hunsley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
tca-scaffold = "tca_scaffold.tca_scaffold:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
